# led-copper-string-zigbee

./: .gitignore  README.md  build.sh  requirements.txt  west.yml
.github/workflows/: build.yml
firmware/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  sysbuild.conf  sysbuild_mcuboot.conf
firmware/boards/: promicro_nrf52840_nrf52840.conf  promicro_nrf52840_nrf52840.overlay
firmware/include/: pm_config.h  zb_dimmable_light.h  zigbee_light_config.h
firmware/src/: main.c
firmware/sysbuild/mcuboot/: prj.conf
firmware/sysbuild/mcuboot/boards/: promicro_nrf52840_nrf52840.conf
zigbee2mqtt/external_converters/: LEDCopperV1.js
